--- a/style.css
+++ b/style.css
@@ -3,7 +3,20 @@ body {
     font-family: sans-serif;
 }
 
+#container {
+    display: block;
+    margin: auto;
+    max-width: 900px;
+    min-width: 450px;    
+    background: salmon;
+    border: solid 6px black;
+    border-radius: 15px;
+}
+
 h1 {
     text-align: center;
-    border: solid 6px white;
+}
+
+h2 {
+    text-align: center;
 }
