--- a/style.css
+++ b/style.css
@@ -13,10 +13,64 @@ body {
     border-radius: 15px;
 }
 
+#container:hover {
+    background: rgb(251, 154, 143);
+}
+
 h1 {
     text-align: center;
 }
 
 h2 {
     text-align: center;
+}
+
+#button-div {
+    width: 100px;
+    display: block;
+    margin: 20px auto; 
+}
+
+#photo-button {
+    text-align: center;
+    font-size: 22px;
+    width: 90px;
+    height: 70px;
+    color: white;
+    background-color: black;
+    border: none;
+    box-shadow: 4px 2px 3px burlywood;
+}
+
+#photo-button:hover {
+    background-color: white;
+    color: black;
+    box-shadow: 4px 2px 3px red;
+}
+
+#new-div {
+    padding: 50px 5px;
+    display: block;
+    font-size: 20px;
+    width: 200px;
+    border: solid 4px white;
+    background-color: slategrey;
+    box-shadow: 5px 3px 2px black;
+    margin: 50px auto;
+    text-align: center;
+}
+
+#new-button-div {
+    width: 150px;
+    margin: auto;
+}
+
+#new-button {
+    text-align: center;
+    border: none;
+    background-color: black;
+    color: white;
+    width: 90px;
+    height: 40px;
+    font-size: 20px;
 }
