--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ h2 {
     margin: 20px auto; 
 }
 
-#photo-button {
+#test-button {
     text-align: center;
     font-size: 22px;
     width: 90px;
@@ -42,13 +42,13 @@ h2 {
     box-shadow: 4px 2px 3px burlywood;
 }
 
-#photo-button:hover {
+#test-button:hover {
     background-color: white;
     color: black;
     box-shadow: 4px 2px 3px red;
 }
 
-#new-div {
+#new-div #new-div-two {
     padding: 50px 5px;
     display: block;
     font-size: 20px;
@@ -61,13 +61,14 @@ h2 {
 }
 
 #new-button-div {
-    width: 150px;
+    width: 100px;
     margin: auto;
 }
 
 #new-button {
     text-align: center;
     border: none;
+    border-radius: 10px;
     background-color: black;
     color: white;
     width: 90px;
